# ytmusic-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/: custom_list_box.py  globals.py  interface.py  main.py  player.py
ytmusic_cli/: __init__.py  __main__.py  config.py  custom_list_box.py  interface.py  main.py  player.py
