[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytmusic-cli"
version = "0.1.0"
description = "A terminal-based frontend for YouTube Music"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "ytmusicapi>=1.0.0",
    "urwid>=2.1.0",
]

[project.scripts]
ytmusic-cli = "ytmusic_cli.main:main"

[tool.setuptools]
packages = ["ytmusic_cli"]

